src/test/ui/associated-types/cache/project-fn-ret-invariant.krisskross.nll.stderr
error: lifetime may not live long enough
  --> $DIR/project-fn-ret-invariant.rs:55:4
   |
LL | fn transmute<'a,'b>(x: Type<'a>, y: Type<'b>) -> (Type<'a>, Type<'b>) {
   |              -- -- lifetime `'b` defined here
   |              |
   |              lifetime `'a` defined here
...
LL |    (a, b)
   |    ^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`

error: lifetime may not live long enough
  --> $DIR/project-fn-ret-invariant.rs:55:4
   |
LL | fn transmute<'a,'b>(x: Type<'a>, y: Type<'b>) -> (Type<'a>, Type<'b>) {
   |              -- -- lifetime `'b` defined here
   |              |
   |              lifetime `'a` defined here
...
LL |    (a, b)
   |    ^^^^^^ function was supposed to return data with lifetime `'a` but it is returning data with lifetime `'b`

error: aborting due to 2 previous errors

